--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/border_lightwhite"
+    android:background="@drawable/border"
     android:id="@+id/weatherLayout"
     android:padding="@dimen/activity_margin">
 
